--- a/hew_2/.env_cp
+++ b/hew_2/.env_cp
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ynxWhnyciaa4zJLqeLTriwE01TlkSeF3J6oacCbdpzQ=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:3000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=z_link_database
+DB_DATABASE=relief_market_database
 DB_USERNAME=docker
 DB_PASSWORD=docker
 
